--- a/historial-despliegues-full.yml
+++ b/historial-despliegues-full.yml
@@ -1,7 +1,8 @@
 - name: Deployment History Collector
   hosts: all
   gather_facts: true
-  become: true
+  become: false
+
 
   vars:
     output_dir: "/var/log/deploy-history"
@@ -44,4 +45,5 @@
       copy:
         content: "{{ deployment_snapshot | to_nice_json }}"
         dest: "{{ output_dir }}/{{ inventory_hostname }}_{{ ansible_date_time.date }}_{{ ansible_date_time.time }}.json"
+
 
